# git-learner

./: .gitignore  README.md  makefile  pyproject.toml  server.py
app/: app.py  auth.py  extensions.py  modules.py
app/static/: module_step.js  styles.css
app/templates/: base.html  index.html  login.html  module.html  module_card.html  module_progress.html  module_step.html  modules_home.html  user.html
db/: __init__.py  create.py
discover/: basic.py
module_core/: __init__.py  steps.py
modules/: __init__.py  basic.py  clone_commit_update_push.py  create_repo.py  defs.py  delete_repo.py  steps.py
test/: test_db.py  test_module.py
