[project]
name = "git-learner"
version = "0.1.0"
description = "A system for learning git related workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.3.2",
    "flask>=3.0.3",
    "gitpython>=3.1.43",
    "pygithub>=2.5.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "wonderwords>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "double"
